Fix issue with logo not being visible due to inconsistent capital letters in image name

--- a/css/site.css
+++ b/css/site.css
@@ -132,7 +132,7 @@ h6 {
     width: 120px;
     display: inline-block;
     background-repeat: no-repeat;
-    background-image: url("../img/TwoPlayerChess_logo_120px.png");
+    background-image: url("../img/twoplayerchess_logo_120px.png");
     background-size: contain;
     position: absolute;
     left: 24px;
